Header z-index Fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -401,7 +401,7 @@ padding: 0 10px;
 
 div#box{display: none;}
 
-div.fotobg{ background: url(../img/bg/fotobg.png) no-repeat;  width: 323px; max-width: 323px; height: 452px; z-index: 999; position: absolute; top: -7px; left: 540px;}
+div.fotobg{ background: url(../img/bg/fotobg.png) no-repeat;  width: 323px; max-width: 323px; height: 452px; z-index: 809; position: absolute; top: -7px; left: 540px;}
 
 
 div.menuActividad{ background: url(../img/bg/menuActividad.png) no-repeat;  width: 374px; max-width: 374px; height: 165px; z-index: 1; position: absolute; top: -4px; left: -5px;}
@@ -409,7 +409,7 @@ div.menuActividad{ background: url(../img/bg/menuActividad.png) no-repeat;  widt
 
 .fotobg label{ text-align: left; padding-left: 33px;}
 div.fotobg h1{ width: 253px; padding: 90px 30px 0; font-size: 20px; font-weight: 500; text-align: left;}
-.fotologin{cursor: pointer; z-index: 22; position: relative;}
+.fotologin{cursor: pointer; z-index:810; position: relative;}
 
 .whiteback{ background: #fff;}
 
